Fix: add overflow-x hidden for the html, thanks to cperry's suggestion

--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -40,3 +40,11 @@ p {
 	padding: 0;
 	position: relative;
 }
+
+
+/* Thanks Cperry!! */
+html {
+	height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+}
